# rustviz-web

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  rustviz.sh  rustwiz.sh
descriptions/: RustvizParse.md  parse.md  src.md  svg_generator.md
mdbook/: book.toml  generate_svg.sh  host-book.mjs  playground.md
mdbook/mdbook_plugin/: book.js  helpers.js  visualization.css
mdbook/src/: SUMMARY.md  copy.md  func_take_ownership.md  func_take_return_ownership.md  immutable_borrow.md  immutable_borrow_method_call.md  immutable_variable.md  index.md  move_assignment.md  move_different_scope.md  move_func_return.md  multiple_immutable_borrow.md  mutable_borrow.md  mutable_borrow_method_call.md  mutable_variables.md  playground.md  string_from_move_print.md
mdbook/theme/: playground.css  playground.js
mdbook/theme/pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
parse/: Cargo.toml
rustviz_mdbook/: .gitignore  view_examples.sh
src/: main.rs
src/svg_generator/: Cargo.toml  README.md  error.rs  infer.rs  lib.rs  parse.rs
src/svg_generator/svg_frontend/: code_panel.rs  svg_generation.rs  timeline_panel.rs
src/svg_generator/templates/: book_svg_style.css
wasm/: Cargo.toml  build.sh
wasm/src/: lib.rs
workers/rustc-api/: README.md  package-lock.json  package.json  wrangler.toml
workers/rustc-api/src/: index.ts
