[package]
name = "rustviz-svg"
version = "0.1.0"
authors = [
    "Gabriel Luo <luogm@umich.edu>", "Ke Du <madoka@umich.edu>",
    "Yingying Zhu <zyy@umich.edu>", "Marcelo Almeida <mgba@umich.edu>",
    "Haochen Zhang <haochenz@umich.edu>", "Vishnu Reddy <reddyvis@umich.edu>"
]
edition = "2018"

[lib]
name = "rustviz_lib"
path = "lib.rs"

[dependencies]
handlebars = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
